--- a/public/output.css
+++ b/public/output.css
@@ -562,16 +562,249 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container{
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1115px){
+  .container{
+    max-width: 1115px;
+  }
+}
+
+.mr-4{
+  margin-right: 1rem;
+}
+
+.mb-1{
+  margin-bottom: 0.25rem;
+}
+
+.block{
+  display: block;
+}
+
+.flex{
+  display: flex;
+}
+
+.h-\[12\.8175rem\]{
+  height: 12.8175rem;
+}
+
+.h-\[8\.4375rem\]{
+  height: 8.4375rem;
+}
+
+.h-\[5\.625rem\]{
+  height: 5.625rem;
+}
+
+.h-\[\]{
+  height: ;
+}
+
+.h-\[4\]{
+  height: 4;
+}
+
+.h-\[4\.\]{
+  height: 4.;
+}
+
+.h-\[4\.3\]{
+  height: 4.3;
+}
+
+.h-\[4\.38r\]{
+  height: 4.38r;
+}
+
+.h-\[4\.38re\]{
+  height: 4.38re;
+}
+
+.h-\[4\.38rem\]{
+  height: 4.38rem;
+}
+
+.min-h-screen{
+  min-height: 100vh;
+}
+
+.w-\[5\.625rem\]{
+  width: 5.625rem;
+}
+
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.items-center{
+  align-items: center;
+}
+
+.justify-center{
+  justify-content: center;
+}
+
+.space-x-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
+.rounded-full{
+  border-radius: 9999px;
+}
+
+.border-4{
+  border-width: 4px;
+}
+
+.border-paleBlue{
+  --tw-border-opacity: 1;
+  border-color: hsl(236 100% 87% / var(--tw-border-opacity));
+}
+
 .bg-veryDarkBlue{
   --tw-bg-opacity: 1;
   background-color: hsl(226 43% 10% / var(--tw-bg-opacity));
 }
 
-.attribution {
-  font-size: 11px;
-  text-align: center;
+.bg-darkBlue{
+  --tw-bg-opacity: 1;
+  background-color: hsl(235 46% 20% / var(--tw-bg-opacity));
 }
 
-.attribution a {
-  color: hsl(228, 45%, 44%);
+.bg-Blue{
+  --tw-bg-opacity: 1;
+  background-color: hsl(246 80% 60% / var(--tw-bg-opacity));
 }
+
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-\[1\.625rem\]{
+  padding-left: 1.625rem;
+  padding-right: 1.625rem;
+}
+
+.pl-8{
+  padding-left: 2rem;
+}
+
+.font-rubik{
+  font-family: 'Rubik', 'sans-serif';
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.font-normal{
+  font-weight: 400;
+}
+
+.font-medium{
+  font-weight: 500;
+}
+
+.text-desaturatedBlue{
+  --tw-text-opacity: 1;
+  color: hsl(235 45% 61% / var(--tw-text-opacity));
+}
+
+.text-paleBlue{
+  --tw-text-opacity: 1;
+  color: hsl(236 100% 87% / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: hsl(0 0% 100% / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px){
+  .md\:h-\[25\.5rem\]{
+    height: 25.5rem;
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1115px){
+  .lg\:block{
+    display: block;
+  }
+
+  .lg\:h-\[32\.625rem\]{
+    height: 32.625rem;
+  }
+
+  .lg\:h-\[22\.5rem\]{
+    height: 22.5rem;
+  }
+
+  .lg\:h-1{
+    height: 0.25rem;
+  }
+
+  .lg\:h-10{
+    height: 2.5rem;
+  }
+
+  .lg\:h-\[10\.125rem\]{
+    height: 10.125rem;
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:space-y-6 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+  }
+
+  .lg\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .lg\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
+
