--- a/public/output.css
+++ b/public/output.css
@@ -594,53 +594,76 @@ video {
   position: relative;
 }
 
-.top-\[\]{
-  top: ;
-}
-
-.top-\[2\]{
-  top: 2;
-}
-
-.top-\[2\.\]{
-  top: 2.;
-}
-
-.top-\[2\.3\]{
-  top: 2.3;
-}
-
-.top-\[2\.37\]{
-  top: 2.37;
-}
-
-.top-\[2\.37r\]{
-  top: 2.37r;
-}
-
-.top-\[2\.375\]{
-  top: 2.375;
-}
-
-.top-\[2\.375r\]{
-  top: 2.375r;
-}
-
-.top-\[2\.375re\]{
-  top: 2.375re;
-}
-
 .top-\[2\.375rem\]{
   top: 2.375rem;
+}
+
+.left-0{
+  left: 0px;
+}
+
+.bottom-0{
+  bottom: 0px;
+}
+
+.-bottom-0{
+  bottom: -0px;
+}
+
+.-bottom-1{
+  bottom: -0.25rem;
+}
+
+.-left-0{
+  left: -0px;
+}
+
+.-left-\[1\]{
+  left: -1;
+}
+
+.-left-\[1p\]{
+  left: -1p;
+}
+
+.-left-\[1px\]{
+  left: -1px;
+}
+
+.-bottom-\[2\]{
+  bottom: -2;
+}
+
+.-bottom-\[2p\]{
+  bottom: -2p;
+}
+
+.-bottom-\[2px\]{
+  bottom: -2px;
+}
+
+.-right-0{
+  right: -0px;
+}
+
+.-right-\[2\]{
+  right: -2;
+}
+
+.-right-\[2p\]{
+  right: -2p;
+}
+
+.-right-\[2px\]{
+  right: -2px;
 }
 
 .z-30{
   z-index: 30;
 }
 
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
+.mb-6{
+  margin-bottom: 1.5rem;
 }
 
 .mr-4{
@@ -651,40 +674,12 @@ video {
   margin-bottom: 0.25rem;
 }
 
+.mb-4{
+  margin-bottom: 1rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
-}
-
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-
-.mt-\[\]{
-  margin-top: ;
-}
-
-.mt-\[2\.\]{
-  margin-top: 2.;
-}
-
-.mt-\[2\.3\]{
-  margin-top: 2.3;
-}
-
-.mt-\[2\.37\]{
-  margin-top: 2.37;
-}
-
-.mt-\[2\.375\]{
-  margin-top: 2.375;
-}
-
-.mt-\[2\.375r\]{
-  margin-top: 2.375r;
-}
-
-.mt-\[2\.375rem\]{
-  margin-top: 2.375rem;
 }
 
 .block{
@@ -699,116 +694,16 @@ video {
   display: grid;
 }
 
+.h-\[8\.4375rem\]{
+  height: 8.4375rem;
+}
+
 .h-\[5\.625rem\]{
   height: 5.625rem;
 }
 
 .h-\[4\.38rem\]{
   height: 4.38rem;
-}
-
-.h-\[\]{
-  height: ;
-}
-
-.h-\[8\]{
-  height: 8;
-}
-
-.h-\[8\.\]{
-  height: 8.;
-}
-
-.h-\[8\.437\]{
-  height: 8.437;
-}
-
-.h-\[8\.4375\]{
-  height: 8.4375;
-}
-
-.h-\[8\.4375r\]{
-  height: 8.4375r;
-}
-
-.h-\[8\.4375re\]{
-  height: 8.4375re;
-}
-
-.h-\[8\.4375rem\]{
-  height: 8.4375rem;
-}
-
-.h-\[1\]{
-  height: 1;
-}
-
-.h-\[15\]{
-  height: 15;
-}
-
-.h-\[15\.\]{
-  height: 15.;
-}
-
-.h-\[15\.3\]{
-  height: 15.3;
-}
-
-.h-\[15\.31\]{
-  height: 15.31;
-}
-
-.h-\[15\.312\]{
-  height: 15.312;
-}
-
-.h-\[15\.3125\]{
-  height: 15.3125;
-}
-
-.h-\[15\.3125r\]{
-  height: 15.3125r;
-}
-
-.h-\[15\.3125re\]{
-  height: 15.3125re;
-}
-
-.h-\[15\.3125rem\]{
-  height: 15.3125rem;
-}
-
-.h-\[10\]{
-  height: 10;
-}
-
-.h-\[10r\]{
-  height: 10r;
-}
-
-.h-\[10re\]{
-  height: 10re;
-}
-
-.h-\[10rem\]{
-  height: 10rem;
-}
-
-.h-\[10\.rem\]{
-  height: 10.rem;
-}
-
-.h-\[10\.0rem\]{
-  height: 10.0rem;
-}
-
-.h-\[10\.06rem\]{
-  height: 10.06rem;
-}
-
-.h-\[10\.062rem\]{
-  height: 10.062rem;
 }
 
 .h-\[10\.0625rem\]{
@@ -819,72 +714,32 @@ video {
   height: 7.6875rem;
 }
 
-.h-full{
-  height: 100%;
-}
-
-.h-\[7\]{
-  height: 7;
-}
-
-.h-\[7\.\]{
-  height: 7.;
-}
-
-.h-\[7\.6\]{
-  height: 7.6;
-}
-
-.h-\[7\.68\]{
-  height: 7.68;
-}
-
-.h-\[7\.687\]{
-  height: 7.687;
-}
-
-.h-\[7\.6875\]{
-  height: 7.6875;
-}
-
-.h-\[7\.6875r\]{
-  height: 7.6875r;
-}
-
 .min-h-screen{
   min-height: 100vh;
-}
-
-.w-\[5\.625rem\]{
-  width: 5.625rem;
 }
 
 .w-\[20\.625rem\]{
   width: 20.625rem;
 }
 
+.w-\[5\.625rem\]{
+  width: 5.625rem;
+}
+
 .w-full{
   width: 100%;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-rows-2{
-  grid-template-rows: repeat(2, minmax(0, 1fr));
-}
-
 .flex-col{
   flex-direction: column;
-}
-
-.items-start{
-  align-items: flex-start;
 }
 
 .items-center{
@@ -907,12 +762,6 @@ video {
   gap: 1.5rem;
 }
 
-.space-x-6 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .overflow-hidden{
   overflow: hidden;
 }
@@ -923,10 +772,6 @@ video {
 
 .rounded-full{
   border-radius: 9999px;
-}
-
-.rounded{
-  border-radius: 0.25rem;
 }
 
 .border-4{
@@ -958,6 +803,31 @@ video {
   background-color: hsl(15 100% 70% / var(--tw-bg-opacity));
 }
 
+.bg-playBg{
+  --tw-bg-opacity: 1;
+  background-color: hsl(195 74% 62% / var(--tw-bg-opacity));
+}
+
+.bg-studyBg{
+  --tw-bg-opacity: 1;
+  background-color: hsl(348 100% 68% / var(--tw-bg-opacity));
+}
+
+.bg-exerciseBg{
+  --tw-bg-opacity: 1;
+  background-color: hsl(145 58% 55% / var(--tw-bg-opacity));
+}
+
+.bg-socialBg{
+  --tw-bg-opacity: 1;
+  background-color: hsl(264 64% 52% / var(--tw-bg-opacity));
+}
+
+.bg-selfCareBg{
+  --tw-bg-opacity: 1;
+  background-color: hsl(43 84% 65% / var(--tw-bg-opacity));
+}
+
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -978,16 +848,20 @@ video {
   padding-right: 1.5rem;
 }
 
-.pl-8{
-  padding-left: 2rem;
-}
-
 .pt-20{
   padding-top: 5rem;
 }
 
 .pb-6{
   padding-bottom: 1.5rem;
+}
+
+.pl-8{
+  padding-left: 2rem;
+}
+
+.text-center{
+  text-align: center;
 }
 
 .font-rubik{
@@ -1004,12 +878,35 @@ video {
   line-height: 2rem;
 }
 
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-normal{
   font-weight: 400;
 }
 
 .font-medium{
   font-weight: 500;
+}
+
+.font-light{
+  font-weight: 300;
+}
+
+.capitalize{
+  text-transform: capitalize;
 }
 
 .text-paleBlue{
@@ -1027,9 +924,12 @@ video {
   color: hsl(235 45% 61% / var(--tw-text-opacity));
 }
 
-.outline-none{
-  outline: 2px solid transparent;
-  outline-offset: 2px;
+.duration-200{
+  transition-duration: 200ms;
+}
+
+.active{
+  color: hsl(0, 0%, 100%);
 }
 
 .before\:absolute::before{
@@ -1037,9 +937,9 @@ video {
   position: absolute;
 }
 
-.before\:top-0::before{
+.before\:-top-\[0\.6rem\]::before{
   content: var(--tw-content);
-  top: 0px;
+  top: -0.6rem;
 }
 
 .before\:right-5::before{
@@ -1047,64 +947,9 @@ video {
   right: 1.25rem;
 }
 
-.before\:-top-0::before{
-  content: var(--tw-content);
-  top: -0px;
-}
-
-.before\:-top-5::before{
-  content: var(--tw-content);
-  top: -1.25rem;
-}
-
-.before\:-top-\[5\]::before{
-  content: var(--tw-content);
-  top: -5;
-}
-
-.before\:-top-\[0\]::before{
-  content: var(--tw-content);
-  top: 0;
-}
-
-.before\:-top-\[0\.6\]::before{
-  content: var(--tw-content);
-  top: -0.6;
-}
-
-.before\:-top-\[0\.6r\]::before{
-  content: var(--tw-content);
-  top: -0.6r;
-}
-
-.before\:-top-\[0\.6re\]::before{
-  content: var(--tw-content);
-  top: -0.6re;
-}
-
-.before\:-top-\[0\.6rem\]::before{
-  content: var(--tw-content);
-  top: -0.6rem;
-}
-
 .before\:z-20::before{
   content: var(--tw-content);
   z-index: 20;
-}
-
-.before\:h-16::before{
-  content: var(--tw-content);
-  height: 4rem;
-}
-
-.before\:h-1::before{
-  content: var(--tw-content);
-  height: 0.25rem;
-}
-
-.before\:h-2::before{
-  content: var(--tw-content);
-  height: 0.5rem;
 }
 
 .before\:h-20::before{
@@ -1112,134 +957,164 @@ video {
   height: 5rem;
 }
 
-.before\:w-2::before{
-  content: var(--tw-content);
-  width: 0.5rem;
-}
-
 .before\:w-20::before{
   content: var(--tw-content);
   width: 5rem;
 }
 
-.before\:bg-\[url\(\)\]::before{
-  content: var(--tw-content);
-  background-image: url();
-}
-
-.before\:bg-\[url\(\'\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('');
-}
-
-.before\:bg-\[url\(\'\.\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('.');
-}
-
-.before\:bg-\[url\(\'\.\.\/\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../');
-}
-
-.before\:bg-\[url\(\'\.\.\/i\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../i');
-}
-
-.before\:bg-\[url\(\'\.\.\/im\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../im');
-}
-
-.before\:bg-\[url\(\'\.\.\/ima\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../ima');
-}
-
-.before\:bg-\[url\(\'\.\.\/imag\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../imag');
-}
-
-.before\:bg-\[url\(\'\.\.\/image\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../image');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/i\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/i');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/ic\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/ic');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/ico\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/ico');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/icon\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/icon');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/icon-\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/icon-');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/icon-w\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/icon-w');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/icon-wo\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/icon-wo');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/icon-wor\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/icon-wor');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/icon-work\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/icon-work');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/icon-work\.\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/icon-work.');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/icon-work\.s\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/icon-work.s');
-}
-
-.before\:bg-\[url\(\'\.\.\/images\/icon-work\.sv\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../images/icon-work.sv');
-}
-
 .before\:bg-\[url\(\'\.\.\/images\/icon-work\.svg\'\)\]::before{
   content: var(--tw-content);
   background-image: url('../images/icon-work.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-p\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-p.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-pl\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-pl.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-pla\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-pla.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-play\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-play.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-s\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-s.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-st\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-st.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-stu\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-stu.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-stud\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-stud.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-study\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-study.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-e\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-e.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-ex\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-ex.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-exe\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-exe.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-exer\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-exer.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-exerc\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-exerc.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-exerci\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-exerci.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-exercis\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-exercis.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-exercise\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-exercise.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-so\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-so.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-soc\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-soc.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-soci\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-soci.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-socia\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-socia.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-social\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-social.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-se\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-se.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-sel\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-sel.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-self\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-self.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-self-\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-self-.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-self-c\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-self-c.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-self-ca\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-self-ca.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-self-car\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-self-car.svg');
+}
+
+.before\:bg-\[url\(\'\.\.\/images\/icon-self-care\.svg\'\)\]::before{
+  content: var(--tw-content);
+  background-image: url('../images/icon-self-care.svg');
 }
 
 .before\:bg-contain::before{
@@ -1252,41 +1127,35 @@ video {
   background-repeat: no-repeat;
 }
 
+.hover\:bg-desaturatedBlue:hover{
+  --tw-bg-opacity: 1;
+  background-color: hsl(235 45% 61% / var(--tw-bg-opacity));
+}
+
+.hover\:bg-paleBlue:hover{
+  --tw-bg-opacity: 1;
+  background-color: hsl(236 100% 87% / var(--tw-bg-opacity));
+}
+
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: hsl(0 0% 100% / var(--tw-text-opacity));
 }
 
-.active\:text-white:active{
+.hover\:text-paleBlue:hover{
   --tw-text-opacity: 1;
-  color: hsl(0 0% 100% / var(--tw-text-opacity));
+  color: hsl(236 100% 87% / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px){
-  .md\:h-\[25\.5rem\]{
-    height: 25.5rem;
-  }
-
-  .md\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:gap-7{
-    gap: 1.75rem;
+  .md\:mb-6{
+    margin-bottom: 1.5rem;
   }
 }
 
 @media (min-width: 1115px){
-  .lg\:top-1{
-    top: 0.25rem;
-  }
-
   .lg\:top-11{
     top: 2.75rem;
-  }
-
-  .lg\:mb-10{
-    margin-bottom: 2.5rem;
   }
 
   .lg\:mb-0{
@@ -1297,12 +1166,24 @@ video {
     margin-right: 1.75rem;
   }
 
-  .lg\:mt-1{
-    margin-top: 0.25rem;
+  .lg\:mb-10{
+    margin-bottom: 2.5rem;
   }
 
-  .lg\:mt-11{
-    margin-top: 2.75rem;
+  .lg\:mb-9{
+    margin-bottom: 2.25rem;
+  }
+
+  .lg\:mb-4{
+    margin-bottom: 1rem;
+  }
+
+  .lg\:mb-8{
+    margin-bottom: 2rem;
+  }
+
+  .lg\:mb-7{
+    margin-bottom: 1.75rem;
   }
 
   .lg\:block{
@@ -1313,48 +1194,12 @@ video {
     display: flex;
   }
 
-  .lg\:h-\[10\.125rem\]{
-    height: 10.125rem;
-  }
-
-  .lg\:h-\[\]{
-    height: ;
-  }
-
-  .lg\:h-\[2\]{
-    height: 2;
-  }
-
-  .lg\:h-\[22\]{
-    height: 22;
-  }
-
-  .lg\:h-\[22\.\]{
-    height: 22.;
-  }
-
-  .lg\:h-\[22\.1\]{
-    height: 22.1;
-  }
-
-  .lg\:h-\[22\.18\]{
-    height: 22.18;
-  }
-
-  .lg\:h-\[22\.187\]{
-    height: 22.187;
-  }
-
-  .lg\:h-\[22\.1875\]{
-    height: 22.1875;
-  }
-
-  .lg\:h-\[22\.1875r\]{
-    height: 22.1875r;
-  }
-
   .lg\:h-\[22\.1875rem\]{
     height: 22.1875rem;
+  }
+
+  .lg\:h-\[10\.125rem\]{
+    height: 10.125rem;
   }
 
   .lg\:h-\[15\.3125rem\]{
@@ -1365,92 +1210,12 @@ video {
     height: 12.5625rem;
   }
 
-  .lg\:h-\[1\]{
-    height: 1;
-  }
-
-  .lg\:h-\[12\]{
-    height: 12;
-  }
-
-  .lg\:h-\[12\.\]{
-    height: 12.;
-  }
-
-  .lg\:h-\[12\.5\]{
-    height: 12.5;
-  }
-
-  .lg\:h-\[12\.56\]{
-    height: 12.56;
-  }
-
-  .lg\:h-\[12\.562\]{
-    height: 12.562;
-  }
-
-  .lg\:h-\[12\.5625\]{
-    height: 12.5625;
-  }
-
-  .lg\:h-\[12\.5625r\]{
-    height: 12.5625r;
-  }
-
-  .lg\:h-\[12\.5625re\]{
-    height: 12.5625re;
-  }
-
-  .lg\:w-\[\]{
-    width: ;
-  }
-
-  .lg\:w-\[1\]{
-    width: 1;
-  }
-
-  .lg\:w-\[16\]{
-    width: 16;
-  }
-
-  .lg\:w-\[16\.\]{
-    width: 16.;
-  }
-
-  .lg\:w-\[16\.1\]{
-    width: 16.1;
-  }
-
-  .lg\:w-\[16\.12\]{
-    width: 16.12;
-  }
-
-  .lg\:w-\[16\.124\]{
-    width: 16.124;
-  }
-
-  .lg\:w-\[16\.125\]{
-    width: 16.125;
-  }
-
-  .lg\:w-\[16\.125r\]{
-    width: 16.125r;
-  }
-
   .lg\:w-\[16\.125rem\]{
     width: 16.125rem;
   }
 
-  .lg\:grid-cols-4{
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .lg\:grid-rows-2{
-    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
@@ -1465,10 +1230,6 @@ video {
     align-items: flex-start;
   }
 
-  .lg\:justify-start{
-    justify-content: flex-start;
-  }
-
   .lg\:justify-between{
     justify-content: space-between;
   }
@@ -1477,14 +1238,9 @@ video {
     gap: 1.75rem;
   }
 
-  .lg\:space-y-6 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-y-reverse: 0;
-    margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-  }
-
-  .lg\:p-0{
-    padding: 0px;
+  .lg\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .lg\:px-0{
@@ -1492,19 +1248,9 @@ video {
     padding-right: 0px;
   }
 
-  .lg\:py-6{
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-  }
-
   .lg\:py-7{
     padding-top: 1.75rem;
     padding-bottom: 1.75rem;
-  }
-
-  .lg\:py-0{
-    padding-top: 0px;
-    padding-bottom: 0px;
   }
 
   .lg\:px-7{
@@ -1516,17 +1262,9 @@ video {
     padding-top: 2rem;
   }
 
-  .lg\:pl-8{
-    padding-left: 2rem;
-  }
-
-  .lg\:pt-0{
-    padding-top: 0px;
-  }
-
-  .lg\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .lg\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .lg\:text-xl{
@@ -1534,10 +1272,17 @@ video {
     line-height: 1.75rem;
   }
 
-  .lg\:text-5xl{
-    font-size: 3rem;
+  .lg\:text-6xl{
+    font-size: 3.75rem;
     line-height: 1;
   }
+
+  .lg\:text-\[44px\]{
+    font-size: 44px;
+  }
+
+  .lg\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
 }
-
-
